final server code, should require no further action

--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -13,7 +13,7 @@
       <div class="row">
          <div class="large-12 columns text-center">
             <fieldset>
-             <legend>Perform Table Options (Only Selects Working)</legend>
+             <legend>Perform Table Options</legend>
                <form method="POST" action="dbaccess.jsp">
                <div class="row">
                   <div class="large-6 columns">
